--- a/index.html
+++ b/index.html
@@ -258,9 +258,9 @@
                 <input class="absolute opacity-0 " id="tab-multi-four" type="checkbox" name="tabs">
                 <label class="block p-5 leading-normal cursor-pointer" for="tab-multi-four">Economics</label>
                 <div class="tab-content overflow-hidden border-l-2 bg-gray-100 border-indigo-500 leading-normal">
-                    <!-- <div class="w-full md:w-3/5 mx-auto p-8">
-                        <p>Open <strong>one</strong></p>
-                        <div class="shadow-md">
+                    <div class="w-full md:w-3/5 mx-auto p-8">
+                        <p>No Current Assignments<strong></strong></p>
+                        <!-- <div class="shadow-md">
                             <div class="tab w-full overflow-hidden border-t">
                                 <input class="absolute opacity-0" id="tab-single-ten" type="radio" name="tabs2">
                                 <label class="block p-5 leading-normal cursor-pointer" for="tab-single-ten">Label One</label>
@@ -288,12 +288,12 @@
                                     <p class="p-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tenetur, architecto, explicabo perferendis nostrum, maxime impedit atque odit sunt pariatur illo obcaecati soluta molestias iure facere dolorum adipisci eum?
                                         Saepe, itaque.</p>
                                 </div>
-                            </div>
-                        </div>
-                    </div> -->
-
+                            </div> -->
+                    </div>
                 </div>
+
             </div>
+
 
             <!-- .........................................FCA.................. -->
 
