--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Tailwind CSS Accordion</title>
+    <title>Sheikh Zayed Assignment Detais</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css" rel="stylesheet">
     <style>
         /* Tab content - closed */
@@ -98,7 +98,7 @@
 
 <body class="font-sans container">
     <div class="w-full md:w-3/5 mx-auto p-8">
-        <p>SZIC <strong>Assignment Details</strong></p>
+        <p>Sheikh Zayed <strong>Assignment Details</strong></p>
 
         <!-- ...............................Islamic...................... -->
 
